--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>TPI</title>
 </head>
+
 <body>
-    
-    <script type="module" src="./js/model/ProductosMD.js"></script>
+    <sc-container>
+        <sc-autocomplete id="autocomplete-ciudad" placeholder="Departamento" class="card" ></sc-autocomplete>
+    </sc-container>
+    <!--script type="module" src="./js/model/ProductosMD.js"></script-->
+    <script type="module" src="./js/view/frmProducto.js"></script>
 </body>
+
 </html>
