--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="blank"></div>
         </div>
     </main>
-    <script type="module" src="js/view/init.js"></script>
+    <script type="module" src="js/view/frmSession.js"></script>
     <script type="module" src="js/control/components/scissors.js"></script>
 </body>
 
