--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
     <main>
         <sc-container>
             <sc-autocomplete id="autocomplete-ciudad" placeholder="Articulo" datavalue="articulo"></sc-autocomplete>
-            <sc-datatable id="datatable-origen" pagesize=3>
+            <sc-datatable id="datatable-origen" pagesize=3 paginated=false>
                 <sc-datacolumn datavalue="idArticulo" datalabel="Id"></sc-datacolumn>
                 <sc-datacolumn datavalue="articulo" datalabel="Articulo"></sc-datacolumn>
             </sc-datatable>
