--- a/libreria/test/test.html
+++ b/libreria/test/test.html
@@ -34,6 +34,8 @@
         let cajaResources= new cajaMD();
         let bodegaResources =new BodegaMD();
         let resultado;
+
+	sessionStorage.setItem("session", "{sucursal:'APA1508',caja:'1'}");
         
         //GET ARTICULOMD
         describe("Prueba para Articulo", function () {
