--- a/libreria/facturacion.html
+++ b/libreria/facturacion.html
@@ -21,7 +21,7 @@
         <img alt="logo" src="./img/logo.png" />
     </header>
     <main>
-        <h2>facturar</h2>
+        <h2>facturacion</h2>
 
         <div id="dt">
             <sc-container>
